# llm-era

./: LICENSE  README.md  pyproject.toml
llmbpo/cfgs/: dpo_hf_train.yaml  sft_hf_train.yaml
llmbpo/cfgs/model/: llama.yaml
llmbpo/cfgs/train/: reward.yaml
llmbpo/nn/: __init__.py
llmbpo/nn/bpo_hf/: __init__.py  dataset.py  model.py
llmbpo/nn/dpo/: __init__.py  dataset.py  model.py
llmbpo/nn/dpo_hf/: model.py
llmbpo/nn/reward/: model.py
llmbpo/scripts/: bpo_hf_train.py  sft_hf_train.py
llmera/cfgs/: bpo_hf_train.yaml  bpo_train.yaml  dpo_hf_train.yaml  dpo_train.yaml  era_hf_train.yaml  era_train.yaml  reward_train.yaml  sft_hf_train.yaml  sft_train.yaml
llmera/cfgs/model/: gpt2.yaml  llama.yaml  pythia.yaml
llmera/cfgs/tokenizer/: gpt2.yaml  llama.yaml
llmera/cfgs/train/: bpo.yaml  bpo_hf.yaml  dpo.yaml  dpo_hf.yaml  era.yaml  era_hf.yaml  sft.yaml  sft_hf.yaml
llmera/nn/: __init__.py  utils.py
llmera/nn/dpo_hf/: __init__.py  dataset.py  model.py
llmera/nn/era/: __init__.py  dataset.py  model.py
llmera/nn/era_hf/: __init__.py  dataset.py  model.py
llmera/nn/reward/: __init__.py  dataset.py
llmera/nn/sft/: __init__.py  dataset.py  model.py
llmera/scripts/: bpo_train.py  dpo_hf_train.py  dpo_train.py  era_hf_train.py  era_train.py  reward_train.py  sft_train.py
run_scripts/: run_bpo.sh  run_sft.sh
