[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-era"
version = "0.0.1"
authors = [
  { name="Shriram Chennakesavalu", email="shriramc@stanford.edu" },
  { name="Frank Hu", email="frankhu@stanford.edu" },
  { name="Sebastian Ibarraran", email="si264@stanford.edu" },
  { name="Grant Rotskoff", email="rotskoff@stanford.edu" }
]
description = "Energy Rank Alignment for Aligning Large Language Models"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["llmera"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[project.urls]
Homepage = "https://github.com/rotskoff-group/llm-era"

[project.scripts]
sft_train = "llmera.scripts.sft_train:main"
llm_era_train = "llmera.scripts.era_train:main"
llm_dpo_train = "llmera.scripts.dpo_train:main"
llm_hf_era_train = "llmera.scripts.era_hf_train:main"
llm_hf_dpo_train = "llmera.scripts.dpo_hf_train:main"
llm_hf_sft_train = "llmera.scripts.sft_hf_train:main"
llm_reward_train = "llmera.scripts.reward_train:main"
